--- a/themes/lotusdocs/layouts/partials/docs/head.html
+++ b/themes/lotusdocs/layouts/partials/docs/head.html
@@ -23,10 +23,10 @@
     {{- with .Description | default ($.Param "description") }}
     <meta name="description" content="{{ . }}">
     {{- end }}
-    <meta name="keywords" content="Documentation, Hugo, Hugo Theme, Bootstrap" />
-    <meta name="author" content="Colin Wilson - Lotus Labs" />
-    <meta name="email" content="support@aigis.uk" />
-    <meta name="website" content="https://lotusdocs.dev" />
+    <meta name="keywords" content="Chapar, testing, rest api, grpc" />
+    <meta name="author" content="Mohsen mirzakhani" />
+    <meta name="email" content="help@chapar.rest" />
+    <meta name="website" content="https://chapar.rest" />
     <meta name="Version" content="v0.1.0" />
     <!-- favicon -->
     {{ block "favicon" . }}{{ partialCached (printf "%s/%s" ($.Scratch.Get "pathName") "head/favicon.html") . }}{{ end }}
