--- a/themes/lotusdocs/layouts/partials/header.html
+++ b/themes/lotusdocs/layouts/partials/header.html
@@ -3,8 +3,10 @@
     <div class="container d-flex justify-content-between align-items-center">
         <!-- Logo container-->
         <a class="logo" aria-label="Home" href='{{ relLangURL "" }}'>
-            {{ with resources.Get "images/logos/mark.svg" }}
-                {{ .Content | safeHTML }}
+
+            {{ with resources.Get "images/logos/marks.png" }}
+                <img src="{{ .RelPermalink }}" alt="Chapar logo" height="30px">
+               <!-- {{ .Content | safeHTML }} -->
             {{ end }}
         </a>
         <!-- End Logo container-->
