--- a/themes/lotusdocs/layouts/partials/head.html
+++ b/themes/lotusdocs/layouts/partials/head.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex">
     {{- end }}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chapar is a api testing tools build with golang" />
+    <meta name="description" content="Chapar is a api testing tools build with Go" />
     <meta name="keywords" content="Restful, grpc, api, testing" />
     <meta name="author" content="Mohsen Mirzakhani" />
     <meta name="website" content="https://chapar.rest" />
